Minor change to 'good teams' slide

--- a/slides/demystifying_data_science.tex
+++ b/slides/demystifying_data_science.tex
@@ -620,7 +620,7 @@
     Successful Data Science teams are\ldots
     \begin{itemize}
         \item Flexible and open
-        \item Diverse
+        \item Diverse $\to$ not just Data Scientists!
         \item Collaborative
     \end{itemize}
 \end{frame}
